--- a/app/style.less
+++ b/app/style.less
@@ -1,10 +1,17 @@
 .App {
-  transition :transform 1s;
-  ::placeholder {
-    color: gray;
-  }
-
   display: flex;
-  flex-direction: row;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  h2 {
+    color: #222;
+    margin-top: 20%;
+    margin-bottom: 5%;
+    font-size: 30px;
+  }
+  span {
+    color: #666;
+    font-size: 14px;
+  }
 }
