updata webpack config

--- a/app/style.less
+++ b/app/style.less
@@ -4,9 +4,12 @@
   justify-content: center;
   flex-direction: column;
   width: 100%;
+  img {
+    padding-top: 10%;
+  }
   h2 {
     color: #222;
-    margin-top: 20%;
+    margin-top: 10%;
     margin-bottom: 5%;
     font-size: 30px;
   }
